# cgkmc.cpp

./: .gitignore  CITATION.cff  CMakeLists.txt  README.md
benchmarks/: petn_smoke.cpp
examples/: petn_paper.json  simple_cubic_short.json  trp_l_tryptophan.json  trp_l_tryptophan_notes.md
include/cgkmc_core/: config.hpp  dump_writer.hpp  simulation.hpp
results/petn/: petn_final_points.tsv  petn_final_surface_points.tsv  petn_ovito_surface_area.csv  petn_surface_energy.csv  petn_surface_energy_ovito.csv
results/trp_l_tryptophan/: trp_l_tryptophan_final_points.tsv  trp_l_tryptophan_final_surface_points.tsv  trp_l_tryptophan_ovito_surface_area.csv  trp_l_tryptophan_surface_energy_ovito.csv
src/: config.cpp  dump_writer.cpp  main.cpp  simulation.cpp
tests/: test_core.cpp
tools/: build_petn_figure2_from_ovito.mjs  build_trp_figures.mjs  export_ovito_surface_area.py  plot_petn_figure2_ovito.gp  plot_petn_figure3.gp  plot_trp_figure2_ovito.gp  plot_trp_figure3.gp  recreate_petn_figures.mjs
